# treqe

./: .gitignore  audit_all.py  audit_cat.py  audit_catalogo.py  audit_detalle.py  audit_prod.py  check_api.py  check_back.py  check_css.py  check_logo.py  check_parent.py  debug_perfil.py  debug_prod.py  diversify.py  find_gallery.py  fix_align.py  fix_all.py  fix_blog.py  fix_bloglink.py  fix_card.py  fix_cat3.py  fix_catalog.py  fix_chip.py  fix_chip2.py  fix_clean_search.py  fix_final.py  fix_final2.py  fix_hub.py  fix_imports.py  fix_matches.py  fix_minimal.py  fix_more.py  fix_prices.py  fix_search_pos.py  fix_zindex.py  mib-landing-body.txt  multi_photos.py  package.json  pnpm-lock.yaml  railway.toml  (+34 more)
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt  seed.py  start.sh
apps/api/src/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/api/src/models/: __init__.py  blog_post.py  dispute.py  favorite.py  match.py  notification.py  offer.py  payment.py  product.py  purchase.py  rejected_pair.py  review.py  shipment.py  user.py
apps/api/src/routers/: algorithm.py  auth.py  blog.py  disputes.py  favorites.py  matches.py  notifications.py  offers.py  payment_methods.py  payments.py  products.py  purchases.py  reviews.py  shipments.py  support.py  transactions.py  users.py  webhooks.py
apps/api/src/schemas/: auth.py
apps/api/src/services/: auth.py  notifications.py  redis_listener.py
apps/api/src/workers/: algorithm_worker.py  celery_app.py  cleanup_worker.py  (+2 more)
apps/api/tests/: test_api.py  test_phase2.py  test_phase3.py
(+135 files in other folders)
